2002-09-12  Christian Ruppert <arc@gmx.li>
	* uwm/special.c: corrected default for CPPcall to "cpp" (quotes missing)
	* uwm/special.c: changed #include "time.h" to #include <time.h>
2002-09-12  Christian Ruppert <arc@gmx.li>
	* uwm/Makefile.am: added uwm/tree.c to the list .c-files and uwm/tree.h
	  to the list of non installed headers.
	* uwm/tree.c, uwm/tree.h: added a simple module to create and search in
	  binary balanced trees for use with keyboard configurability.

2002-09-12  Christian Ruppert <arc@gmx.li>
	* uwm/nodes.c, uwm/nodes.h: added SortList(NodeList *list, melfunc mel)
	  function.
	* uwm/nodes.c, uwm/nodes.h: removed actual pointer from node lists which
	  was not used anyway.

2002-09-04  Christian Ruppert <arc@gmx.li>
	* uwm/init.c: added grabbing of UWM_MODIFIERS/End which must either
	  have been forgotten when keyboard stuff was implemented or gotten
	  accidentally deleted sometime.

2002-09-03  Christian Ruppert <arc@gmx.li>
	* uwm/Makefile.am: added define UDE_BIN_PATH for more reliable.
	  restart.
	* uwm/uwmmenu.c: added call for UDE_BIN_PATH/uwm in restart procedure.

2002-06-21  Christian Ruppert <arc@gmx.li>
	* uwm/uwm.c (main), uwm/init.c (InitUWM): moved CheckCPP from InitUWM
	  to main so that it is called before we install SIGCHILD handler.

2002-04-21  Christian Ruppert <arc@gmx.li>
	* uwm/handlers.c: replaced forgotten (ControlMask|Mod1Mask) by
	  UWM_MODIFIERS in HandleKeyRelease.

2002-04-21  Christian Ruppert <arc@gmx.li>
	* configure.in, acconfig.h: added option to disable use of
	  BackingStore and SaveUnder which seem to be buggy under XFree4.
	* init.c: implemented switching off backing store at configure time.
	* uwm/menu.c, uwm/uwm.h: added TheScreen.MenuBackGC to work around
	  buggy XFree4 BackingStore and to make menu drawing slightly more
	  efficient on other servers.
	* uwm/menu.c, uwm/init.c: moved GCs init from menu.c to init.c since
	  menu GCs now are global.