@@ -1,6 +1,13 @@
+2002-10-13  Christian Ruppert <arc@gmx.li>
+	* uwm/special.c, uwm/special.h: added MyStrdup function to replace
+	  strdup (which doesn't exist on all systems and has no error treatment)
+	* uwm/nodes.c, uwm/nodes.h: bugfix changed name of melfunc to gelfunc to
+	  be consistent with tree.h
+
 2002-09-12  Christian Ruppert <arc@gmx.li>
 	* uwm/special.c: corrected default for CPPcall to "cpp" (quotes missing)
 	* uwm/special.c: changed #include "time.h" to #include <time.h>
+
 2002-09-12  Christian Ruppert <arc@gmx.li>
 	* uwm/Makefile.am: added uwm/tree.c to the list .c-files and uwm/tree.h
 	  to the list of non installed headers.
